packages/svelte/tests/compiler-errors/samples/component-slot-duplicate-error-5/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'duplicate_slot_name',
		message: "Duplicate slot name 'foo' in <Nested>"
	}
});
